 * Distributed devicestate now supports the use of the XMPP protocol, in addition to
   AIS.  For more information, please see doc/distributed_devstate-XMPP.txt
 * The addition of G.719 pass-through support.
 * Added support for 16khz Speex audio.  This can be enabled by using 'allow=speex16'
   during device configuration.


CLI Changes
-----------
 * The 'core set debug' and 'core set verbose' commands, in previous versions, could
   optionally accept a filename, to apply the setting only to the code generated from
   that source file when Asterisk was built. However, there are some modules in Asterisk
   that are composed of multiple source files, so this did not result in the behavior
   that users expected. In this version, 'core set debug' and 'core set verbose'
   can optionally accept *module* names instead (with or without the .so extension),
   which applies the setting to the entire module specified, regardless of which source
   files it was built from.
 * New 'manager show settings' command showing the current settings loaded from
   manager.conf. 
 * Added 'all' keyword to the CLI command "channel request hangup" so that you can send
   the channel hangup request to all channels.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.1 to Asterisk 1.6.2  -------------
------------------------------------------------------------------------------

SIP Changes
-----------
 * Added support for SUBSCRIBE/NOTIFY with dialog-info based call pickups.
   Snom phones use this for call pickup of extensions that the phone is
   subscribed to.
 * Added support for setting the domain in the URI for caller of an
   outbound call by using the SIPFROMDOMAIN channel variable.
 * Added a new configuration option "remotesecret" for authentication to
   remote services. For backwards compatibility, "secret" still has the
   same function as before, but now you can configure both a remote secret and a