@@ -513,7 +513,8 @@ Miscellaneous
  * The addition of G.719 pass-through support.
  * Added support for 16khz Speex audio.  This can be enabled by using 'allow=speex16'
    during device configuration.
-
+ * The UNISTIM channel driver (chan_unistim) has been updated to support devices that
+   have less than 3 lines on the LCD.
 
 CLI Changes
 -----------
